--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 <div id="main-content" class="container">
   <div class="jumbotron">
-  <img src="images/edik.jpg" alt="native" class="image-responsive" width="100%" height="600">
+  <img src="https://davidbankys.github.io/Aleros-Kitchen/images/edik.jpg" alt="native" class="image-responsive" width="100%" height="600">
   <button class="btn">Place Your Order</button>
 </div> 
 </div>
