--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Food site</title>
 
-    <link href="https://davidbankys.github.io/Aleros-Kitchen/index.html/style.css" rel="stylesheet">
+    <link href="https://davidbankys.github.io/Aleros-Kitchen/style.css" rel="stylesheet">
   </head>
   <body>
  <div class="navbar">
